tests/syntax_error/double_assignment.jou
def foo() -> void:
    x = y = 7  # Error: only one variable can be assigned at a time
